--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -162,6 +162,27 @@
                 app:defaultValue="true" />
     </PreferenceCategory>
 
+
+    <PreferenceCategory
+        android:key="@string/nginx_category"
+        android:title="@string/nginx_category"
+        app:isPreferenceVisible="true">
+        <Preference
+            android:key="@string/nginx_url_key"
+            android:title="@string/nginx_url_pref"
+            android:icon="@drawable/ic_baseline_play_arrow_24" />
+        <Preference
+            android:key="@string/nginx_credentials"
+            android:title="@string/nginx_credentials_title"
+            android:icon="@drawable/video_locked"
+            android:summary="@string/nginx_credentials_summary"/>
+        <Preference
+            android:key="@string/nginx_info"
+            android:title="@string/nginx_info_title"
+            android:icon="@drawable/ic_baseline_play_arrow_24"
+            android:summary="@string/nginx_info_summary" />
+    </PreferenceCategory>
+
     <PreferenceCategory
             android:key="info"
             android:title="@string/settings_info"
