--- a/app/src/main/res/layout/bottom_input_dialog.xml
+++ b/app/src/main/res/layout/bottom_input_dialog.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
-            android:autofillHints="The Nginx server url"
+            android:autofillHints="Autofill Hint"
             android:inputType="text"
             tools:ignore="LabelFor" />
 
