--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -18,11 +18,11 @@
               <gradient
                       android:startY="0"
                       android:startX="200"
-                      android:endY="0"
-                      android:endX="300"
+                      android:endY="150"
+                      android:endX="000"
                       android:type="linear">
-                  <item android:offset="0" android:color="#2309db"/>
-                  <item android:offset="1" android:color="#1B08A1"/>
+                  <item android:offset="0" android:color="#E8A135"/>
+                  <item android:offset="1" android:color="#FFA220"/>
               </gradient>
           </aapt:attr>
       </path>
@@ -36,25 +36,10 @@
                   android:endY="0"
                   android:endX="000"
                   android:type="linear">
-              <item android:offset="0" android:color="#254cdb"/>
-              <item android:offset="1" android:color="#1138DD"/>
+              <item android:offset="0" android:color="#EF961A"/>
+              <item android:offset="1" android:color="#C71717"/>
           </gradient>
       </aapt:attr>
       </path>
-
-      <path android:name="path_2" android:pathData="M 99.84 99.32 C 89.871 95.945 79.051 96.024 69.133 99.545 C 59.215 103.065 50.765 109.826 45.155 118.73 C 39.545 127.634 37.094 138.174 38.2 148.64 L 37.94 148.64 C 30.783 148.665 23.909 151.471 18.779 156.461 C 13.648 161.452 10.653 168.246 10.43 175.399 C 10.207 182.553 12.773 189.52 17.583 194.82 C 22.392 200.121 29.079 203.349 36.22 203.82 C 67.216 202.93 96.673 189.98 118.284 167.742 C 139.895 145.504 151.997 115.689 152 84.68 C 152 83 151.94 81.33 151.87 79.68 C 149.443 79.361 146.998 79.194 144.55 79.18 C 136.095 79.171 127.735 80.962 120.026 84.434 C 112.317 87.907 105.435 92.982 99.84 99.32 Z"
-             android:strokeWidth="1">
-      <aapt:attr name="android:fillColor">
-          <gradient
-                  android:startY="0"
-                  android:startX="150"
-                  android:endY="0"
-                  android:endX="000"
-                  android:type="linear">
-              <item android:offset="0" android:color="#407EF1"/>
-              <item android:offset="1" android:color="#428CC5"/>
-          </gradient>
-      </aapt:attr>
-  </path>
   </group>
 </vector>
