--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -42,13 +42,13 @@
                 app:key="@string/playback_speed_enabled_key"
                 android:title="@string/eigengraumode_settings"
                 android:summary="@string/eigengraumode_settings_des"
-                app:defaultValue="false" />
+                app:defaultValue="true" />
         <SwitchPreference
                 android:icon="@drawable/ic_baseline_ondemand_video_24"
                 app:key="@string/swipe_enabled_key"
                 android:title="@string/swipe_to_seek_settings"
                 android:summary="@string/swipe_to_seek_settings_des"
-                app:defaultValue="true" />
+                app:defaultValue="false" />
         <SwitchPreference
                 android:icon="@drawable/ic_baseline_ondemand_video_24"
                 app:key="@string/swipe_vertical_enabled_key"
@@ -60,7 +60,7 @@
                 app:key="@string/double_tap_enabled_key"
                 android:title="@string/double_tap_to_seek_settings"
                 android:summary="@string/double_tap_to_seek_settings_des"
-                app:defaultValue="false" />
+                app:defaultValue="true" />
         <SwitchPreference
                 android:icon="@drawable/netflix_pause"
                 app:key="@string/double_tap_pause_enabled_key"
@@ -206,7 +206,7 @@
                 android:title="@string/pref_disable_acra"
                 android:summaryOff="@string/bug_report_settings_off"
                 android:summaryOn="@string/bug_report_settings_on"
-                android:defaultValue="false" />
+                android:defaultValue="true" />
         <SwitchPreference
                 app:key="@string/auto_update_key"
                 android:title="@string/updates_settings"
