--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -43,8 +43,9 @@
         <com.google.android.material.button.MaterialButton
                 tools:visibility="visible"
                 android:visibility="gone"
-                android:layout_marginTop="70dp"
-                android:layout_gravity="center"
+                android:layout_marginBottom="100dp"
+                android:layout_marginEnd="20dp"
+                android:layout_gravity="bottom|right"
                 app:cornerRadius="4dp"
                 android:id="@+id/overlay_loading_skip_button"
                 android:text="@string/skip_loading"
