--- a/app/src/main/res/drawable/ic_baseline_volume_down_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_volume_down_24.xml
@@ -1,5 +1,5 @@
 <vector android:autoMirrored="true" android:height="24dp"
     android:tint="#FFFFFF" android:viewportHeight="24"
     android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M18.5,12c0,-1.77 -1.02,-3.29 -2.5,-4.03v8.05c1.48,-0.73 2.5,-2.25 2.5,-4.02zM5,9v6h4l5,5V4L9,9H5z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M 16.5 12 c 0 -1.77 -1.02 -3.29 -2.5 -4.03 v 8.05 c 1.48 -0.73 2.5 -2.25 2.5 -4.02 z M 3 9 v 6 h 4 l 5 5 V 4 L 7 9 H 3 z"/>
 </vector>
